# entropy_playground

./: .gitignore  Cargo.toml  README.md
simulation_data/: bonds.json  distribution.json  elements.json  molecules.json  recipient.json
src/: main.rs
src/bases/: atom.rs  bond.rs  checks.rs  initialization.rs  loader.rs  mod.rs  molecule.rs  physics.rs  plot.rs  reaction.rs  recipient.rs
